fix: adjust cards alignment at home page

--- a/src/styles/_reset.sass
+++ b/src/styles/_reset.sass
@@ -55,12 +55,12 @@ a
     min-width: 100vw
     min-height: 100vh
 
-// .container
-//     width: 100%
-//     max-width: 1300px
-//     margin: 0 auto
+.container
+    width: 100%
+    max-width: 1300px
+    margin: 0 auto
 
-//     padding: 20px
+    padding: 20px
 
 .error
     color: variables.$color-alert-1
