--- a/src/styles/components/cards/cards.sass
+++ b/src/styles/components/cards/cards.sass
@@ -1,18 +1,24 @@
 @use '../../variables'
 
 .product
-    max-width: 312px
+    width: 312px
+    height: 350px
     display: flex
     flex-direction: column
     gap:15px
     
-    h2
+    h4
         font-family: variables.$default-font
         font-style: normal
         font-weight: 600
         font-size: 16px
         line-height: 20px
         color: variables.$color-grey-1
+
+        overflow: hidden
+        display: -webkit-box
+        -webkit-line-clamp: 1
+        -webkit-box-orient: vertical
     
     p
         font-family: 'Inter'
@@ -22,11 +28,21 @@
         line-height: 24px
         color: variables.$color-grey-2
 
+        overflow: hidden
+        display: -webkit-box
+        -webkit-line-clamp: 2
+        -webkit-box-orient: vertical
+
     .div-elipsis
         justify-content: flex-start
 
     .product-description
         width: 96%
+        height: 100%
+
+        display: flex
+        flex-direction: column
+        justify-content: space-between
         
     .img-product
         height: 150px
@@ -54,12 +70,18 @@
             position: absolute
             top: 0px
 
+            p
+                color: variables.$color-grey-10
+
 
     .product-infos
         justify-content: space-between
         align-items: center
         display: flex
         span
+            font-weight: 500
+            color: variables.$color-grey-1
+            font-family: variables.$heading-font
             font-size: 16px
         .km-year
             display: flex
