--- a/src/styles/components/tags/tags.sass
+++ b/src/styles/components/tags/tags.sass
@@ -24,11 +24,13 @@
 .tag-inative
     background: variables.$color-grey-4
     p
+        padding: 3px 8px
         color: variables.$color-white-fixed
 
 .tag-ative
     background: variables.$color-brand-1
     p
+        padding: 3px 8px
         color: variables.$color-white-fixed
 
 .tag-cash
